# lima

./: .appveyor.yml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile-debian9.4  Dockerfile-semaphore-ubuntu14.04  Dockerfile-semaphore-ubuntu16.04  Dockerfile-travis-ubuntu14.04  Dockerfile-travis-ubuntu16.04  Dockerfile-ubuntu14.04  Dockerfile-ubuntu16.04  Doxyfile.in  INSTALL  INSTALL.md  README.md  SetCompilerFlags.cmake  SystemSpecificInformations.cmake  WINDOWS_README.md  appveyor.yml  build_with_ninja.bat  docker_push.sh  gbuild-asan.sh  gbuild-clang.sh  gbuild-release.sh  gbuild.sh  index.html  lima-bundle-startup.sh  lima.icns  lima.plist  manageQt.cmake  manageQt5.cmake  params.json  pyproject.toml  (+9 more)
deeplima/: CMakeLists.txt
deeplima/apps/: CMakeLists.txt  deeplima.cpp  gen-lemm-dict.cpp  mwt-dict.cpp  to_implement_for_lemmatization.md  train-dp.cpp  train-lemmatization.cpp  train-ner.cpp  train-segm.cpp  train-tag.cpp
deeplima/build_scripts/: Dockerfile  build_all.sh  build_docker.sh
deeplima/cmake/: UpdateGitCommitHash.cmake
deeplima/data/: README.md  langlist.json
deeplima/libs/: CMakeLists.txt
deeplima/scripts/: conll2conllu.pl  download_langlist.py  find_wiki_for_corpus.py  tokenize_archive.sh  train_ud_tagging.sh
deeplima/tests/: CMakeLists.txt  test_eigen_label_decoder.cpp  test_label_decoder.cpp
lima_annoqt/: AUTHORS  CMakeLists.txt  COPYING  Doxyfile
lima_annoqt/doc/: index.docbook
lima_annoqt/src/: CMakeLists.txt  README  annoqt.cpp  annoqt.h  annoqt.pro  annoqtconfeditor.qrc  annotationConfigurationHandler.cpp  annotationConfigurationHandler.h  annotationEditWidget.cpp  annotationEditWidget.h  confeditor.cpp  confeditor.h  confeditor.pro  confeditor.qrc  confeditormain.cpp  item.xpm  kcolorbutton.cpp  kcolorbutton.h  kcolorchoosermode.h  kcolorcollection.cpp  kcolorcollection.h  kcolorcombo.cpp  kcolorcombo.h  kcolordialog.cpp  kcolordialog.h  kcolordialog_p.h  kcolorhelpers_p.h  kcolormimedata.cpp  kcolormimedata.h  kcolorscheme.cpp  kcolorscheme.h  kcolorspaces.cpp  kcolorspaces.h  kcolorutils.cpp  kcolorutils.h  kcolorvalueselector.cpp  kcolorvalueselector.h  khuesaturationselect.cpp  khuesaturationselect.h  kselector.cpp  (+9 more)
lima_annoqt/test/: CMakeLists.txt  config-annotations.xml  f-200ib.txt  f-200ib.txt.se.xml  f-200ib.txt.se.xml.ok
lima_common/: AUTHORS  CMakeLists.txt  COPYING  Doxyfile.in  INSTALL  LIMACOMMONConfig-src.cmake  LIMACOMMONConfig.cmake  NEWS  README  TODO  cbuild.sh  cobuild.sh  cpack.sh
lima_common/conf/: CMakeLists.txt  lima-analysis.xml  lima-common-eng.ud.xml  lima-common-eng.xml  lima-common-fre.ud.xml  lima-common-fre.xml  lima-common-por.xml  lima-common-ud-eng.xml  lima-common-ud.xml  lima-common.xml  log4cpp.properties
lima_common/src/: CMakeLists.txt
lima_common/test/: CMakeLists.txt  dummyInitializableObject.h  dummyProcessUnits.h  parseXMLFile.cpp  showinttypessizes.cpp  testAbstractFactoryPattern.cpp  testAccessMethod.cpp  testFsaDict16.cpp  testLexicon.cpp  testProcessUnitFramework.cpp
lima_common/tools/: CMakeLists.txt  convertToUtf8.cpp
lima_gui/: CMakeLists.txt  COPYING  README.md
lima_gui/conf/: CMakeLists.txt  limagui.properties
lima_gui/src/: CMakeLists.txt  ConllListModel.cpp  ConllListModel.h  ConllParser.cpp  ConllParser.h  DeployQt.cmake  LimaConfiguration.cpp  LimaConfiguration.h  LimaGui.h  LimaGuiApplication.cpp  LimaGuiApplication.h  LimaGuiApplicationPrivate.h  LimaGuiCommon.h  LimaGuiExport.h  NamedEntitiesParser.cpp  NamedEntitiesParser.h  TextAnalyzer.cpp  TextAnalyzer.h  Threads.cpp  Threads.h  WinDeployQt.cmake  Writer.cpp  Writer.h  lima.desktop  main.cpp  namedentitiesparser.cpp  namedentitiesparser.h  resources-old.qrc  resources.qrc  sample.tex  tablemodel.cpp  tablemodel.h
lima_gui/test/: CMakeLists.txt  main.cpp  tst_main.qml
lima_linguisticdata/: CMakeLists.txt  ChangeLog  LIMALDATAConfig-src.cmake  Languages.cmake  TODO  cbuild.sh  cpack.sh
lima_linguisticdata/SRLIntegration/: CMakeLists.txt  FrameNet-eng.rules  FrameNet-fre.rules  FrameNet-modex.xml  FraneNet-modex.xml  VerbNet-fre.rules  VerbNet-modex.xml
lima_linguisticdata/SpecificEntities/: CMakeLists.txt
lima_linguisticdata/analysisDictionary/: CMakeLists.txt  closing_tag.txt  opening_tag.txt
lima_linguisticdata/cmake/: CMakeLists.txt  LinguisticData.cmake
lima_linguisticdata/disambiguisationMatrices/: CMakeLists.txt  find_bigram_in_corpus.pl  find_trigram_in_corpus.pl  surgeneration.pl
lima_linguisticdata/rules-idiom/: CMakeLists.txt  add_heads.sh  compile-idiomatic.pl  compile-user-idiom.sh
lima_linguisticdata/scratch/: CMakeLists.txt
lima_linguisticdata/scripts/: addnormfield.pl  ajoutetabs  ajoutetabs.pl  analysis2disambmatrix.pl  buildSeparableVerbList.pl  build_dico_xml_from_txt  build_dico_xml_from_txt.pl  build_dictionary_data_key  build_dictionary_data_key.sh  build_separable_verb_list.py  check-idiomatic-triggers  check-idiomatic-triggers.pl  cmakeconvertdefautjys  cmakeconvertdefautjys.pl  cmakeconvertdefautjys.py  cmakeconvertstd  cmakeconvertstd.pl  cmakeconvertstd.py  compile-idiomatic.pl  compute-and-expand-desaccentuation-automaton.sh  convaccents.txt  convert-lefff-tags-to-lima-std.pl  convert-ptb-to-ud.py  convert-ud-to-dic.py  convert-ud-to-success-categ-retag.py  convertCodeToSymbolicCode.py  convertCodesComposesJys  convertCodesComposesJys.pl  convertSymbolicCodesFromLefffToLima.py  convertSymbolicCodesFromLefffToLimaDefaults.py  convertSymbolicCodesFromLefffToLimaDict.py  convert_sym2code_in_dico  convert_sym2code_in_dico.pl  convertdefautjys  convertdefautjys.pl  (+79 more)
lima_linguisticprocessing/: AUTHORS  CMakeLists.txt  COPYING  Doxyfile.all  Doxyfile.in  Doxyfile.public  INSTALL  LIMALPConfig-src.cmake  LIMALPConfig.cmake  README  SystemSpecificInformations.cmake  TODO  cbuild.sh  cmake-arguments-windows.txt  cobuild.sh  cpack.sh
lima_pelf/: AUTHORS  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.in  FindQwt.cmake  LICENCES  README  SystemSpecificInformations.cmake  TODO
(+3204 files in other folders)
